website/versioned_docs/version-2.8.x/reference/subsystems/docker.mdx
---
title: docker
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options for interacting with Docker.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[docker]`</span>

<span className={styles.options}>

## Basic options

### `registries`

<Option
  cli_repr={`--docker-registries="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_DOCKER_REGISTRIES'
  default_repr={`{}`}
>

Configure Docker registries. The schema for a registry entry is as follows:
```
{
    "registry-alias": {
        "address": "registry-domain:port",
        "default": bool,
    },
    ...
}
```

If no registries are provided in a `docker_image` target, then all default addresses will be used, if any.
The `docker_image.registries` may be provided with a list of registry addresses and registry aliases prefixed with `@` to be used instead of the defaults.
A configured registry is marked as default either by setting `default = true` or with an alias of `"default"`.

</Option>

### `default_repository`

<Option
  cli_repr={`--docker-default-repository=<str>`}
  env_repr='PANTS_DOCKER_DEFAULT_REPOSITORY'
  default_repr={`{name}`}
>

Configure the default repository name used in the Docker image tag.

The value is formatted and may reference these variables:

  * name
  * directory
  * parent_directory

Example: `--default-repository="{directory}/{name}"`.

The `name` variable is the `docker_image`&#x27;s target name, `directory` and `parent_directory` are the name of the directory in which the BUILD file is for the target, and its parent directory respectively.

Use the `repository` field to set this value directly on a `docker_image` target.
Any registries or tags are added to the image name as required, and should not be part of the repository name.

</Option>

### `build_args`

<Option
  cli_repr={`--docker-build-args="['<str>', '<str>', ...]"`}
  env_repr='PANTS_DOCKER_BUILD_ARGS'
  default_repr={`[]`}
>

Global build arguments (`--build-arg`) to use for all `docker build` invocations. Entries are either strings in the form `ARG_NAME=value` to set an explicit value; or just `ARG_NAME` to copy the value from Pants&#x27;s own environment.

May be provided multiple times on the command line.

Use the `extra_build_args` field on a `docker_image` target for additional image specific build arguments.

</Option>

## Advanced options

### `env_vars`

<Option
  cli_repr={`--docker-env-vars="['<str>', '<str>', ...]"`}
  env_repr='PANTS_DOCKER_ENV_VARS'
  default_repr={`[]`}
>

Environment variables to set for `docker` invocations. Entries are either strings in the form `ENV_VAR=value` to set an explicit value; or just `ENV_VAR` to copy the value from Pants&#x27;s own environment.

</Option>

## Deprecated options

None

</span>